--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Business Card</title>
 </head>
 <body>
-    
+    <div>
+        <img src="Me.jpg" alt="avitar picture of myself">
+        <h3>Jeannette Ocegueda</h3>
+        <p>Full Stack Web Developer</p>
+        <h4>Hesperia, CA</h4>
+    </div>
 </body>
 </html>
