added style to css

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <title>Business Card</title>
 </head>
 <body>
-    <div>
-        <img src="Me.jpg" alt="avitar picture of myself">
+    <div class="card info">
+        <img src="Me.jpg" alt="avitar picture of self">
+        <div class="info">
         <h3>Jeannette Ocegueda</h3>
         <p>Full Stack Web Developer</p>
         <h4>Hesperia, CA</h4>
+    </div>
     </div>
 </body>
 </html>
