added color in css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Business Card</title>
 </head>
 <body>
-    <div class="card info">
+    <div class="card">
         <img src="Me.jpg" alt="avitar picture of self">
         <div class="info">
         <h3>Jeannette Ocegueda</h3>
